--- a/index.html
+++ b/index.html
@@ -44,12 +44,83 @@
       <div class="gradient"></div>
     </nav>
 
-    <div id="second-section">
-      <!-- <div id="skills" class="container">
-        <h2>About</h2>
-      </div> -->
+    <div id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-8 about-col1">
+            <h2>Who am I?</h2>
+            <p>I'm John, an aspiring web developer from San Pedro City, PH.</p>
+            <p>
+              I've been learning web development since July of this year. I find
+              building interactive and responsive websites both fascinating and
+              fun.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
+    <div class="hr-wrapper"><hr /></div>
+
+    <div id="skills">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2>My toolbox of skills</h2>
+            <p>These are the tools and technologies I've learned, so far.</p>
+            <div class="icons-wrapper">
+              <ul>
+                <li>
+                  <i class="fab fa-html5"></i>
+                  <p>HTML5</p>
+                </li>
+                <li>
+                  <i class="fab fa-css3-alt"></i>
+                  <p>CSS3</p>
+                </li>
+                <li>
+                  <i class="fab fa-js"></i>
+                  <p>ES6</p>
+                </li>
+                <li>
+                  <i class="fab fa-bootstrap"></i>
+                  <p>Bootstrap 4</p>
+                </li>
+                <li>
+                  <i class="fab fa-wordpress"></i>
+                  <p>Wordpress</p>
+                </li>
+                <li>
+                  <i class="fab fa-git-alt"></i>
+                  <p>Git</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="hr-wrapper"><hr /></div>
+
+    <div id="projects">
+      <div class="container">
+        <div class="row">
+          <di class="col-12">
+            <h2>My works</h2>
+            <p>Some of the projects I made in the course of learning front-end tools.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer id="footer">
+      <div class="row">
+        <div class="col-12 footer-col1">
+          <p>&copy; 2020 John Carlo Cunanan</p>
+        </div>
+      </div>
+    </footer>
     <script src="assets/js/particles.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/index.js"></script>
