add project section and images

--- a/index.html
+++ b/index.html
@@ -109,6 +109,79 @@
           <di class="col-12">
             <h2>My works</h2>
             <p>Some of the projects I made in the course of learning front-end tools.</p>
+            <ul class="cards">
+              <li class="cards_item">
+                <div class="card">
+                  <div class="card_image">
+                    <div class="bg-hover">
+                    </div>
+                    <img src="assets/images/trakt.png" alt="website image">
+                    <div class="icons-wrapper">
+                      <i class="fab fa-html5"></i>
+                      <i class="fab fa-css3-alt"></i>
+                    </div>
+                  </div>
+                  <div class="card_content">
+                    <h3 class="card_title">Trakt Tv Landing Page</h3>
+                    <p class="card_text">A fully responsive cloned landing page of <a href="https://trakt.tv">https://trakt.tv</a></p>
+                    <button class="btn card_btn">Read More</button>
+                  </div>
+                </div>
+              </li>
+              <li class="cards_item">
+                <div class="card">
+                  <div class="card_image">
+                    <div class="bg-hover">
+                    </div>
+                    <img src="assets/images/1917.png" alt="website image">
+                    <div class="icons-wrapper"><i class="fab fa-wordpress"></i>
+                    </div>
+                  </div>
+                  <div class="card_content">
+                    <h3 class="card_title">Wordpress Woocommerce</h3>
+                    <p class="card_text">A fully responsive tribute page for the film 1917.</p>
+                    <button class="btn card_btn">Read More</button>
+                  </div>
+                </div>
+              </li>
+              <li class="cards_item">
+                <div class="card">
+                  <div class="card_image">
+                    <div class="bg-hover">
+                    </div>
+                    <img src="assets/images/moviethon.png" alt="website image">
+                    <div class="icons-wrapper">
+                      <i class="fab fa-html5"></i>
+                      <i class="fab fa-css3-alt"></i>
+                      <i class="fab fa-js"></i>
+                    </div>
+                  </div>
+                  <div class="card_content">
+                    <h3 class="card_title">Moviethon</h3>
+                    <p class="card_text">A web application that would help you track movies you want to watch. It uses your browser storage to save data</p>
+                    <button class="btn card_btn">Read More</button>
+                  </div>
+                </div>
+              </li>
+              <li class="cards_item">
+                <div class="card">
+                  <div class="card_image">
+                    <div class="bg-hover">
+                    </div>
+                    <img src="assets/images/Portfolio.png" alt="website image">
+                    <div class="icons-wrapper">
+                      <i class="fab fa-html5"></i>
+                      <i class="fab fa-css3-alt"></i>
+                    </div>
+                  </div>
+                  <div class="card_content">
+                    <h3 class="card_title">Personal Website</h3>
+                    <p class="card_text">A fully responsive personal website of mine for this year or maybe not.</p>
+                    <button class="btn card_btn">Read More</button>
+                  </div>
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
