--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
                   <div class="card_content">
                     <h3 class="card_title">Trakt Tv Landing Page</h3>
                     <p class="card_text">A fully responsive cloned landing page of <a href="https://trakt.tv">https://trakt.tv</a></p>
-                    <button class="btn card_btn">Read More</button>
+                    <div class="button-wrapper">
+                      <a><div class="button">Live Link</div></a>
+                      <a><div class="button">Source Code</div></a>
+                    </div>
                   </div>
                 </div>
               </li>
@@ -140,7 +143,9 @@
                   <div class="card_content">
                     <h3 class="card_title">Wordpress Woocommerce</h3>
                     <p class="card_text">A fully responsive tribute page for the film 1917.</p>
-                    <button class="btn card_btn">Read More</button>
+                    <div class="button-wrapper">
+                      <a><div class="button">Live Link</div></a>
+                    </div>
                   </div>
                 </div>
               </li>
@@ -159,7 +164,10 @@
                   <div class="card_content">
                     <h3 class="card_title">Moviethon</h3>
                     <p class="card_text">A web application that would help you track movies you want to watch. It uses your browser storage to save data</p>
-                    <button class="btn card_btn">Read More</button>
+                    <div class="button-wrapper">
+                      <a><div class="button">Live Link</div></a>
+                      <a><div class="button">Source Code</div></a>
+                    </div>
                   </div>
                 </div>
               </li>
@@ -177,7 +185,10 @@
                   <div class="card_content">
                     <h3 class="card_title">Personal Website</h3>
                     <p class="card_text">A fully responsive personal website of mine for this year or maybe not.</p>
-                    <button class="btn card_btn">Read More</button>
+                    <div class="button-wrapper">
+                      <a><div class="button">Live Link</div></a>
+                      <a><div class="button">Source Code</div></a>
+                    </div>
                   </div>
                 </div>
               </li>
