--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             <a href="#home"><li>Home</li></a>
             <a href="#about"><li>About</li></a>
             <a href="#projects"><li>Projects</li></a>
-            <a href="#contact"><li>Contact</li></a>
           </ul>
         </div>
       </div>
@@ -48,7 +47,7 @@
       <div class="container">
         <div class="row">
           <div class="col-8 about-col1">
-            <h2>Who am I?</h2>
+            <h2>A little something about me...</h2>
             <p>I'm John, an aspiring web developer from San Pedro City, PH.</p>
             <p>
               I've been learning web development since July of this year. I find
@@ -123,10 +122,10 @@
                   </div>
                   <div class="card_content">
                     <h3 class="card_title">Trakt Tv Landing Page</h3>
-                    <p class="card_text">A fully responsive cloned landing page of <a href="https://trakt.tv">https://trakt.tv</a></p>
+                    <p class="card_text">A fully responsive cloned landing page of <a href="https://trakt.tv" target="_blank">https://trakt.tv</a>.</p>
                     <div class="button-wrapper">
-                      <a><div class="button">Live Link</div></a>
-                      <a><div class="button">Source Code</div></a>
+                      <a href="https://thecodingjohn.github.io/traktTv-page-clone/" target="_blank"><div class="button">Live Link</div></a>
+                      <a href="https://github.com/theCodingJohn/traktTv-page-clone" target="_blank"><div class="button">Source Code</div></a>
                     </div>
                   </div>
                 </div>
@@ -144,7 +143,7 @@
                     <h3 class="card_title">Wordpress Woocommerce</h3>
                     <p class="card_text">A fully responsive tribute page for the film 1917.</p>
                     <div class="button-wrapper">
-                      <a><div class="button">Live Link</div></a>
+                      <a href="https://1917.thecodingjohn.com/" target="_blank"><div class="button">Live Link</div></a>
                     </div>
                   </div>
                 </div>
@@ -163,10 +162,10 @@
                   </div>
                   <div class="card_content">
                     <h3 class="card_title">Moviethon</h3>
-                    <p class="card_text">A web application that would help you track movies you want to watch. It uses your browser storage to save data</p>
+                    <p class="card_text">A web application that would help you track movies you want to watch. It uses your browser's local storage as a storage of data.</p>
                     <div class="button-wrapper">
-                      <a><div class="button">Live Link</div></a>
-                      <a><div class="button">Source Code</div></a>
+                      <a href="https://thecodingjohn.github.io/moviethon/" target="_blank"><div class="button">Live Link</div></a>
+                      <a href="https://github.com/theCodingJohn/moviethon" target="_blank"><div class="button">Source Code</div></a>
                     </div>
                   </div>
                 </div>
@@ -186,8 +185,8 @@
                     <h3 class="card_title">Personal Website</h3>
                     <p class="card_text">A fully responsive personal website of mine for this year or maybe not.</p>
                     <div class="button-wrapper">
-                      <a><div class="button">Live Link</div></a>
-                      <a><div class="button">Source Code</div></a>
+                      <a href="https://thecodingjohn.com" target="_blank"><div class="button">Live Link</div></a>
+                      <a href="https://github.com/theCodingJohn/portfolio-2020" target="_blank"><div class="button">Source Code</div></a>
                     </div>
                   </div>
                 </div>
