minor changes in h2 and about section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
               building interactive and responsive websites both fascinating and
               fun.
             </p>
+            <p>When I'm not coding, I'm probably <a href="https://www.last.fm/user/Pectoralz" target="_blank">here</a> and <a href="https://letterboxd.com/" target="_blank">there</a>.</p>
           </div>
         </div>
       </div>
