add arrow down icon

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <div id="hero" class="container">
         <h1>Hey, I'm <span class="john">John</span>.</h1>
         <p>I'm an aspiring web developer.</p>
+        <div class="arrow bounce">
+          <a class="fa fa-arrow-down fa-2x" href="#about"></a>
+        </div>
         <div class="social-links-wrapper">
           <a href="https://github.com/theCodingJohn" target="_blank"
             ><i class="fab fa-github"></i
