--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               building interactive and responsive websites both fascinating and
               fun.
             </p>
-            <p>When I'm not coding, I'm probably <a href="https://www.last.fm/user/Pectoralz" target="_blank">here</a> and <a href="https://letterboxd.com/" target="_blank">there</a>.</p>
+            <p>When I'm not coding, I'm probably <a href="https://www.last.fm/user/Pectoralz" target="_blank">here</a> or maybe <a href="https://letterboxd.com/" target="_blank">there</a>.</p>
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
                   </div>
                   <div class="card_content">
                     <h3 class="card_title">Wordpress Woocommerce</h3>
-                    <p class="card_text">A fully responsive tribute page for the film 1917.</p>
+                    <p class="card_text">A fully responsive tribute page with shop for the film 1917.</p>
                     <div class="button-wrapper">
                       <a href="https://1917.thecodingjohn.com/" target="_blank"><div class="button">Live Link</div></a>
                     </div>
@@ -208,6 +208,7 @@
         </div>
       </div>
     </footer>
+
     <script src="assets/js/particles.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/index.js"></script>
