add codewars badge

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
     <footer id="footer">
       <div class="row">
         <div class="col-12 footer-col1">
+          <a href="https://www.codewars.com/users/jccnnn"><img src="https://www.codewars.com/users/jccnnn/badges/micro"/></a>
           <p>&copy; 2020 John Carlo Cunanan</p>
         </div>
       </div>
