fix font size for mobile screens

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </li>
                 <li>
                   <i class="fab fa-bootstrap"></i>
-                  <p>Bootstrap 4</p>
+                  <p>Bootstrap</p>
                 </li>
                 <li>
                   <i class="fab fa-wordpress"></i>
