--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="home" class="hero-background">
       <div id="hero" class="container">
         <h1>Hey, I'm <span class="john">John</span>.</h1>
-        <p>I'm an aspiring web developer.</p>
+        <p>I'm a front-end web developer.</p>
         <div class="arrow bounce">
           <a class="fa fa-arrow-down fa-2x" href="#about"></a>
         </div>
@@ -51,9 +51,9 @@
         <div class="row">
           <div class="col-8 about-col1">
             <h2>A little something about me...</h2>
-            <p>I'm John, an aspiring web developer from San Pedro City, PH.</p>
+            <p>I'm John, a front-end web developer from San Pedro City, PH.</p>
             <p>
-              I've been learning web development since July of this year. I find
+              I've been learning web development since July of this year. I'm currently studying MERN, right now. I find
               building interactive and responsive websites both fascinating and
               fun.
             </p>
