--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2>A little something about me...</h2>
             <p>I'm John, a front-end web developer from San Pedro City, PH.</p>
             <p>
-              I've been learning web development since July of this year. I'm currently studying MERN, right now. I find
+              I've been learning web development (currently on MERN stack) since July of this year. I find
               building interactive and responsive websites both fascinating and
               fun.
             </p>
