add linkedin icon

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <a href="https://github.com/theCodingJohn" target="_blank"
             ><i class="fab fa-github"></i
           ></a>
+          <a href="https://www.linkedin.com/in/john-carlo-cunanan-11847a17a">
+            <i class="fab fa-linkedin"></i>
+          </a>
           <a href="https://codepen.io/jccnnn" target="_blank"
             ><i class="fab fa-codepen"></i
           ></a>
