--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a href="https://github.com/theCodingJohn" target="_blank"
             ><i class="fab fa-github"></i
           ></a>
-          <a href="https://www.linkedin.com/in/john-carlo-cunanan-11847a17a">
+          <a href="https://www.linkedin.com/in/john-carlo-cunanan-11847a17a" target="_blank">
             <i class="fab fa-linkedin"></i>
           </a>
           <a href="https://codepen.io/jccnnn" target="_blank"
