--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>My toolbox of skills</h2>
+            <h2>My technology stack</h2>
             <p>These are the tools and technologies I've learned, so far.</p>
             <div class="icons-wrapper">
               <ul>
@@ -113,7 +113,7 @@
       <div class="container">
         <div class="row">
           <di class="col-12">
-            <h2>My works</h2>
+            <h2>My work</h2>
             <p>Some of the projects I made in the course of learning front-end tools.</p>
             <ul class="cards">
               <li class="cards_item">
