--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="gradient"></div>
     </nav>
 
-    <div id="about">
+    <!-- <div id="about">
       <div class="container">
         <div class="row">
           <div class="col-8 about-col1">
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="hr-wrapper"><hr /></div>
+    <div class="hr-wrapper"><hr /></div> -->
 
     <div id="skills">
       <div class="container">
