add lastfm icon

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
           <a href="https://www.freecodecamp.org/thecodingjohn" target="_blank"
             ><i class="fab fa-free-code-camp"></i
           ></a>
+          <a href="https://www.last.fm/user/Pectoralz" target="_blank"
+            ><i class="fab fa-lastfm-square"></i></a>
         </div>
       </div>
     </div>
