add about section content

--- a/index.html
+++ b/index.html
@@ -70,6 +70,21 @@
 
     <div class="hr-wrapper"><hr /></div> -->
 
+    <div id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-8 about-col1">
+            <h2>A little something about me...</h2>
+            <p>
+              I'm currently learning web development. And I can't think of anything to put here, yet. 
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="hr-wrapper"><hr /></div> 
+
     <div id="skills">
       <div class="container">
         <div class="row">
